forge/tests/errors/missing_paren.fg
// Error test: missing closing parenthesis
fn main() {
  println("hello"
}
